# project_overspeed

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: fetchRaygui.cmake  fetchRaylib.cmake  fetchTinytmx.cmake  fetchTinyxml2.cmake  fetchZlib.cmake  fetchZstd.cmake
engine/include/Animation/: Animation.h  PlayerAnimation.h  RegisteredPlayerSprites.h
engine/include/Characters/: Character.h  MovementComponent.h  Player.h  PlayerAction.h  PlayerMovement.h  PlayerMovementMode.h  PlayerStates.h
engine/include/Core/: Console.h  Engine.h  Logger.h  Settings.h
engine/include/Debug/: CollisionDebugger.h  DebugDraw.h  DebugLog.h  GlobalDebugger.h  PlayerMovementDebugger.h
engine/include/Geom/: LineSegment.h  Point2D.h  Precision.h  Trsf2D.h  Vector2D.h
engine/include/GeomAlgo/: LineIntersection.h
engine/include/Geometry/: LineIntersection.h
engine/include/Graphics/: RegisteredPlayerSprites.h  RenderFlip.h  SpecialTilesDrawing.h  TextureManager.h
engine/include/Input/: InputGlobalGetters.h  InputHandler.h  InputLayer.h
engine/include/Inputs/: Command.h  InputHandler.h
engine/include/Map/: Actuator.h  Interactable.h  Layer.h  RegisteredMaps.h  TiledGridPosition.h  Tileset.h  TilesetImageData.h  TmxObjectConversion.h
engine/include/Object/: GameObject.h  IObject.h
engine/include/Physics/: Collider.h  MovementSimulation.h  PhysicsUpdateState.h  Point2D.h  Precisions.h  RigidBody.h  Trsf2D.h  Vector2D.h
engine/include/Player/: Player.h  PlayerBodyState.h  PlayerPhysicalState.h
engine/include/Timer/: Timer.h
engine/include/Tools/: Assert.h  CompileTimeFunctions.h
engine/include/World/: Level.h  LevelActuators.h  LevelCollision.h  LevelInteractableTiles.h  Settings.h  World.h
engine/include/WorldInteraction/: GroundCollision.h  PlayerWithWorldInteraction.h
engine/src/: main.cpp
engine/src/Animation/: Animation.cpp  PlayerAnimation.cpp  RegisteredPlayerSprites.cpp
engine/src/Characters/: MovementComponent.cpp  Player.cpp  PlayerMovement.cpp
engine/src/Core/: Console.cpp  Engine.cpp  Logger.cpp  Settings.cpp
engine/src/Debug/: CollisionDebugger.cpp  DebugDraw.cpp  DebugLog.cpp  GlobalDebugger.cpp  PlayerMovementDebugger.cpp
engine/src/Geom/: Trsf2D.cpp  Vector2D.cpp
engine/src/Graphics/: RegisteredPlayerSprites.cpp  SpecialTilesDrawing.cpp  TextureManager.cpp
engine/src/Input/: GlobalGetters.cpp  InputGlobalGetters.cpp  InputHandler.cpp
engine/src/Inputs/: InputHandler.cpp
engine/src/Map/: Actuator.cpp  Interactable.cpp  RegisteredMaps.cpp  TmxObjectConversion.cpp
engine/src/Physics/: Collider.cpp  MovementSimulation.cpp  RigidBody.cpp  Trsf2D.cpp  Vector2D.cpp
engine/src/Player/: Player.cpp
engine/src/Timer/: Timer.cpp
engine/src/Tools/: CompileTimeFunctions.cpp
engine/src/World/: Level.cpp  LevelCollision.cpp  World.cpp
engine/src/WorldInteraction/: GroundCollision.cpp  PlayerWithWorldInteraction.cpp
